update childless event tracker tests
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>